--- a/salt/app/parser.jinja
+++ b/salt/app/parser.jinja
@@ -1,5 +1,5 @@
 {%
-set environments_parsed = {
-	foo: 'bar'
-}
+set environments_parsed = ({
+	'foo': 'bar'
+}, merge(salt['pillar.get']('environments'))
 %}
