--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Hello World</title>
-</head>
-<body>
-  {{> say-hello}}
-</body>
-</html>
+{{> head}}
+  <h1>Demoshop</h1>
+{{> foot}}
