--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -8,7 +8,7 @@
 // @import 'base/icon-font';
 @import 'base/base';
 
-@import 'layout/main-header';
+@import 'layout/header';
 @import 'layout/footer';
 @import 'layout/product';
 @import 'layout/layout';
