--- a/templates/partials/foot.hbs
+++ b/templates/partials/foot.hbs
@@ -1,2 +1,5 @@
+  <div class="overlay"></div>
+  <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+  <script src="/scripts/main.js"></script>
   </body>
 </html>
