--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,6 +1,6 @@
-<header class="main-header">
+<header class="header">
   <a href="/" class="shop-logo">Spryker Shop</a>
   <a href="#" class="nav-toggle js-nav-toggle"><span></span></a>
   <nav class="main-nav"></nav>
-  <a href="#" class="cart-toggle js-cart-toggle">Warenkorb</a>
+  {{> shopping-cart }}
 </header>
