--- a/templates/product-detail.html
+++ b/templates/product-detail.html
@@ -7,9 +7,11 @@
     <p>Batman ist der dunkle Held Gotham Citys. Er hat geschworen, die Stadt vom Verbrechen zu befreien. Immer wenn ein neuer Schurke in der Stadt auftaucht, zieht Batman los, um ihn zu bekämpfen.</p>
     <p class="product__price">€12,99</p>
     <form class="product__add-to-cart">
-      <input type="button" value="-"class="product__quantity-decrease"></input>
-      <input type="number" value="1" class="product__quantity"></input>
-      <input type="button" value="+" class="product__quantity-increase"></input>
+      <div class="spinner">
+        <input type="button" value="-"class="spinner__decrement js-spinner__decrement"></input>
+        <input type="number" value="1" min="1" class="spinner__number js-spinner__number"></input>
+        <input type="button" value="+" class="spinner__increment js-spinner__increment"></input>
+      </div>
       <input type="submit" class="product__add-button cta" value="In den Warenkorb"></input>
     </form>
   </section>
