--- a/assets/styles/base/_typography.scss
+++ b/assets/styles/base/_typography.scss
@@ -1,7 +1,7 @@
 $font-family: Fira Sans, sans-serif;
-$body-font-size: 16px;
+$base-font-size: 16px;
 
-$body-font-size: $body-font-size;
+$body-font-size: $base-font-size;
 $body-line-height: $step;
 $body-font-weight: 300;
 
