--- a/templates/partials/shopping-cart.hbs
+++ b/templates/partials/shopping-cart.hbs
@@ -1,5 +1,6 @@
 <div class="shopping-cart js-shopping-cart">
   <a href="#" class="cart__toggle js-cart-toggle">Warenkorb</a>
+  <a href="#" class="cart__close js-cart-close">Close</a>
   <div class="cart__contents">
     <table class="cart__content-list">
       <tr>
@@ -9,17 +10,17 @@
       </tr>
       <tr>
         <td class="cart__item-name">Batman</td>
-        <td class="cart__item-quantity">1</td>
+        <td class="cart__item-quantity">{{> spinner color="light" value="10"}}</td>
         <td class="cart__item-price">€ 12,99</td>
       </tr>
       <tr>
         <td class="cart__item-name">Brillenpinguin</td>
-        <td class="cart__item-quantity">1</td>
+        <td class="cart__item-quantity">{{> spinner color="light" value="1"}}</td>
         <td class="cart__item-price">€ 8,99</td>
       </tr>
       <tr>
         <td class="cart__item-name">Drachenritter Berserker</td>
-        <td class="cart__item-quantity">2</td>
+        <td class="cart__item-quantity">{{> spinner color="light" value="2"}}</td>
         <td class="cart__item-price">€ 28,99</td>
       </tr>
       <tr>
