--- a/assets/styles/utils/_icon-font.scss
+++ b/assets/styles/utils/_icon-font.scss
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('/fonts/icomoon.eot?qzvmq7');
-	src:url('/fonts/icomoon.eot?#iefixqzvmq7') format('embedded-opentype'),
-		url('/fonts/icomoon.woff?qzvmq7') format('woff'),
-		url('/fonts/icomoon.ttf?qzvmq7') format('truetype'),
-		url('/fonts/icomoon.svg?qzvmq7#icomoon') format('svg');
+	src:url('/fonts/icomoon.eot?-6aprms');
+	src:url('/fonts/icomoon.eot?#iefix-6aprms') format('embedded-opentype'),
+		url('/fonts/icomoon.woff?-6aprms') format('woff'),
+		url('/fonts/icomoon.ttf?-6aprms') format('truetype'),
+		url('/fonts/icomoon.svg?-6aprms#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -21,6 +21,10 @@
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-close:before {
+	content: "\e602";
 }
 
 .icon-shopping-cart:before {
