--- a/assets/styles/components/_shopping-cart.scss
+++ b/assets/styles/components/_shopping-cart.scss
@@ -114,6 +114,7 @@
         color: $light-color;
         font-weight: 500;
         text-transform: uppercase;
+        text-align: left;
       }
 
       .cart__item-name {
