--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -2,5 +2,12 @@
   <a href="/" class="shop-logo">Spryker Shop</a>
   <a href="#" class="nav-toggle js-nav-toggle"><span></span></a>
   <nav class="main-nav"></nav>
+  <div class="header__search js-search">
+    <button class="search__button js-search-button">Search</button>
+    <input type="text" class="search__box js-search-box">
+  </div>
+  <div class="header__user">
+    <button class="user__login js-show-login-button">Anmelden</button>
+  </div>
   {{> shopping-cart }}
 </header>
