--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -10,7 +10,9 @@
 
 @import 'components/spinner';
 @import 'components/overlay';
+@import 'components/login-form';
 @import 'components/shopping-cart';
+@import 'components/search';
 
 @import 'layout/header';
 @import 'layout/footer';
