--- a/assets/styles/components/_overlay.scss
+++ b/assets/styles/components/_overlay.scss
@@ -5,14 +5,20 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 110%;
+  height: 100%;
   z-index: 10;
   overflow: scroll;
   padding: $step*2 $step $step * 2;
-  background-color: rgba(0,0,0,0.85);
-  // transform: translateY(-110%);
-  transition: opacity 200ms ease-in-out;
   pointer-events: none;
+  background-color: rgba(0,0,0,0.85);
+  color: $light-color;
+  transition: opacity 200ms ease-in-out;
+
+  &.overlay--login {
+    z-index: 30;
+    background-color: rgba(255,255,255,0.95);
+    color: $dark-color;
+  }
 }
 
 // showing/hiding overlay
@@ -34,3 +40,25 @@ html.overlay-visible {
 
   }
 }
+
+.overlay__close {
+  display: block;
+  color: transparent !important;
+  position: absolute;
+  top: $step;
+  right: $step;
+  width: $step;
+
+  &::before {
+    content: '\e602';
+    font-family: 'icomoon';
+    font-size: $step;
+    color: $light-color;
+
+    .overlay--login & {
+      color: $dark-color;
+    }
+  }
+}
+
+
