--- a/templates/partials/foot.hbs
+++ b/templates/partials/foot.hbs
@@ -1,4 +1,4 @@
-  <div class="overlay"></div>
+  {{> overlay}}
   <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="/scripts/main.js"></script>
   </body>
