--- a/templates/partials/foot.hbs
+++ b/templates/partials/foot.hbs
@@ -1,5 +1,5 @@
   {{> overlay}}
   <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
-  <script src="/scripts/main.js"></script>
+  <script src="/js/main.js"></script>
   </body>
 </html>
