--- a/templates/partials/head.hbs
+++ b/templates/partials/head.hbs
@@ -7,6 +7,6 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <link href='http://fonts.googleapis.com/css?family=Fira+Sans:300,400,500' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
