catalog page is coming on...

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -9,6 +9,7 @@
 @import 'base/base';
 
 @import 'components/spinner';
+@import 'components/slider';
 @import 'components/overlay';
 @import 'components/login-form';
 @import 'components/shopping-cart';
@@ -17,6 +18,7 @@
 @import 'layout/header';
 @import 'layout/footer';
 @import 'layout/product';
+@import 'layout/catalog';
 @import 'layout/layout';
 
 @import 'vendor/jquery-ui';
