--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -25,8 +25,24 @@
         <li>{{> catalog/filter-color hex='#9b9b9b' id='246' quantity='7'}}</li>
       </ul>
     </section>
-  </div>
 
+    <section class="filter__price">
+      <h1 class="filter__title">Preis</h1>
+      <div class="filter__price-slider js-price-slider"></div>
+      <p>Preisspanne von <span class="filter__price-min js-filter-price-min">0</span> bis <span class="filter__price-max js-filter-price-max">200</span></p>
+    </section>
+
+    <section class="filter__extras">
+      <h1 class="filter__title">Sonstige Merkmale</h1>
+      <ul class="filter__extras-list">
+        <li>{{> catalog/filter-extras name='Neu' id='123' quantity='40'}}</li>
+        <li>{{> catalog/filter-extras name='Sale' id='456' quantity='12'}}</li>
+        <li>{{> catalog/filter-extras name='Besonders toll' id='789' quantity='8'}}</li>
+        <li>{{> catalog/filter-extras name='Aus Kunststoff' id='135' quantity='5'}}</li>
+        <li>{{> catalog/filter-extras name='Aus Holz' id='246' quantity='7'}}</li>
+      </ul>
+    </section>
+  </div>
 </div>
 
 
