--- a/templates/partials/catalog/filter-color.hbs
+++ b/templates/partials/catalog/filter-color.hbs
@@ -1,2 +1,2 @@
-<input type="radio" id="filter-color-1" name="filter-color" data-color="{{hex}}" value="{{id}}" class="filter__color"{{#if checked}} checked=true{{/if}}>
-<label for="filter-color-1" class="filter__color-name">{{hex}} <span class="filter__color-quantity">{{quantity}}</span></label>
+<input type="radio" id="filter-color-{{hex}}" name="filter-color" data-color="{{hex}}" value="{{id}}" class="filter__color-radio"{{#if checked}} checked=true{{/if}}>
+<label for="filter-color-{{hex}}" class="filter__color-name js-color-name">{{hex}} <span class="filter__quantity">{{quantity}}</span></label>
