--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -4,18 +4,18 @@
   <h1 class="catalog__section-title">Wild life</h1>
 
   <div class="catalog__filter">
-    <section class="filter__category">
+    <section class="filter js-filter filter__category" data-filter-id="1">
       <ul class="filter__category-list">
-        <li>{{> catalog/filter-category name='Alle' id='123' quantity='40' checked=true}}</li>
-        <li>{{> catalog/filter-category name='Afrika' id='456' quantity='12'}}</li>
-        <li>{{> catalog/filter-category name='Asien und Australien' id='789' quantity='8'}}</li>
-        <li>{{> catalog/filter-category name='Arktis und Antarktis' id='135' quantity='5'}}</li>
-        <li>{{> catalog/filter-category name='Amerika' id='246' quantity='7'}}</li>
-        <li>{{> catalog/filter-category name='Meere' id='123' quantity='8'}}</li>
+        <li>{{> catalog/filter-default filter-id='1' name='Alle' id='123' quantity='40' checked=true}}</li>
+        <li>{{> catalog/filter-default filter-id='1' name='Afrika' id='456' quantity='12'}}</li>
+        <li>{{> catalog/filter-default filter-id='1' name='Asien und Australien' id='789' quantity='8'}}</li>
+        <li>{{> catalog/filter-default filter-id='1' name='Arktis und Antarktis' id='135' quantity='5'}}</li>
+        <li>{{> catalog/filter-default filter-id='1' name='Amerika' id='246' quantity='7'}}</li>
+        <li>{{> catalog/filter-default filter-id='1' name='Meere' id='123' quantity='8'}}</li>
       </ul>
     </section>
 
-    <section class="filter__color">
+    <section class="filter js-filter filter__color" data-filter-id="2">
       <h1 class="filter__title">Farbe</h1>
       <ul class="filter__color-list">
         <li>{{> catalog/filter-color hex='#ffffff' id='123' quantity='40' checked=true}}</li>
@@ -26,25 +26,34 @@
       </ul>
     </section>
 
-    <section class="filter__price">
+    <section class="filter js-filter filter__price" data-filter-id="3">
       <h1 class="filter__title">Preis</h1>
       <div class="filter__price-slider js-price-slider"></div>
       <p>Preisspanne von <span class="filter__price-min js-filter-price-min">0</span> bis <span class="filter__price-max js-filter-price-max">200</span></p>
     </section>
 
-    <section class="filter__extras">
+    <section class="filter js-filter filter__extras" data-filter-id="4">
       <h1 class="filter__title">Sonstige Merkmale</h1>
       <ul class="filter__extras-list">
-        <li>{{> catalog/filter-extras name='Neu' id='123' quantity='40'}}</li>
-        <li>{{> catalog/filter-extras name='Sale' id='456' quantity='12'}}</li>
-        <li>{{> catalog/filter-extras name='Besonders toll' id='789' quantity='8'}}</li>
-        <li>{{> catalog/filter-extras name='Aus Kunststoff' id='135' quantity='5'}}</li>
-        <li>{{> catalog/filter-extras name='Aus Holz' id='246' quantity='7'}}</li>
+        <li>{{> catalog/filter-multivalue filter-id=4 name='Neu' id='123' quantity='40'}}</li>
+        <li>{{> catalog/filter-multivalue filter-id=4 name='Sale' id='456' quantity='12'}}</li>
+        <li>{{> catalog/filter-multivalue filter-id=4 name='Besonders toll' id='789' quantity='8'}}</li>
+        <li>{{> catalog/filter-multivalue filter-id=4 name='Aus Kunststoff' id='135' quantity='5'}}</li>
+        <li>{{> catalog/filter-multivalue filter-id=4 name='Aus Holz' id='246' quantity='7'}}</li>
       </ul>
     </section>
   </div>
-</div>
 
+  <section class="active-filters">
+    <h1>Aktive filter</h1>
+    <ul class="active-filter__list">
+      {{> catalog/active-filter name='category' id='1' value='' }}
+      {{> catalog/active-filter name='color' id='2' value='' }}
+      {{> catalog/active-filter name='price' id='3' value='' }}
+      {{> catalog/active-filter name='extras' id='4' value='' }}
+    </ul>
+  </section>
+</div>
 
 {{> footer}}
 {{> foot}}
