make sure default filter values don't show in active filter list

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -4,14 +4,14 @@
   <h1 class="catalog__section-title">Wild life</h1>
 
   <div class="catalog__filter">
-    <section class="filter js-filter filter__category" data-filter-id="1">
+    <section class="filter js-filter js-filter-default filter__category" data-filter-id="1">
       <ul class="filter__category-list">
-        <li>{{> catalog/filter-default filter-id='1' name='Alle' id='123' quantity='40' checked=true}}</li>
+        <li>{{> catalog/filter-default filter-id='1' name='Alle' id='123' quantity='40' default=true}}</li>
         <li>{{> catalog/filter-default filter-id='1' name='Afrika' id='456' quantity='12'}}</li>
         <li>{{> catalog/filter-default filter-id='1' name='Asien und Australien' id='789' quantity='8'}}</li>
         <li>{{> catalog/filter-default filter-id='1' name='Arktis und Antarktis' id='135' quantity='5'}}</li>
         <li>{{> catalog/filter-default filter-id='1' name='Amerika' id='246' quantity='7'}}</li>
-        <li>{{> catalog/filter-default filter-id='1' name='Meere' id='123' quantity='8'}}</li>
+        <li>{{> catalog/filter-default filter-id='1' name='Meere' id='999' quantity='8'}}</li>
       </ul>
     </section>
 
