--- a/assets/styles/layout/_catalog.scss
+++ b/assets/styles/layout/_catalog.scss
@@ -1,5 +1,7 @@
 .catalog {
 
+  @include clearfix();
+
   // make space for the header
   padding: $step*3 $step;
   background-color: $pale-color;
@@ -15,172 +17,121 @@
 
   h1 {
     color: $mid-color;
+  }
+}
 
-    &.catalog__section-title {
-      font-size: $step*1.5;
-    }
+.catalog__section-title, .catalog__filter {
+
+  @include media-query('medium') {
+    width: calc(50% - #{$step*2});
+    margin-right: $step;
+    float: left;
+    clear: left;
   }
 
-  .catalog__filter {
-
-    @include media-query('medium') {
-      width: calc(50% - #{$step*2});
-      margin-right: $step*2;
-    }
-
-    @include media-query('large') {
-      width: calc(25% - #{$step});
-    }
-
-    section {
-      padding: $step 0;
-      border-bottom: 1px solid $light-color;
-
-      &:first-child {
-        padding-top: 0;
-      }
-
-      ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-
-        li {
-          margin: 0;
-          padding: 0;
-
-          input[type=radio], input[type=checkbox] {
-            display: none;
-          }
-
-          input[type=radio]:checked + label, input[type=checkbox]:checked + label {
-            font-weight: 600;
-          }
-        }
-      }
-      label {
-        text-transform: uppercase;
-      }
-    }
-
-    .filter__title {
-      font-size: $step;
-    }
-
-    .filter__quantity {
-      &::before {
-        content: '(';
-      }
-      &::after {
-        content: ')';
-      }
-      color: $paler-color;
-    }
-
-    .filter__color {
-      li {
-        display: inline-block;
-        margin-right: $step*.5;
-      }
-
-      label {
-        display: block;
-        width: $step;
-        height: $step;
-        border-radius: 6px;
-        overflow: hidden;
-        color: rgba(0,0,0,0);
-        background-color: #fff;
-        border: 2px solid $paler-color;
-        @include bounce-transition;
-      }
-
-      input[type=radio]:checked + label {
-        transform: scale(1.4);
-      }
-    }
-
-    .filter__price {
-      .filter__price-slider {
-        margin-bottom: $step;
-      }
-
-      .filter__price-min, .filter__price-max {
-        padding: 0 $step*.5;
-        background-color: $light-color;
-        border: 1px solid $paler-color;
-        border-radius: 3px;
-
-        &::before {
-          content: '€';
-        }
-      }
-      p {
-        margin: 0;
-      }
-    }
-
+  @include media-query('large') {
+    width: calc(25% - #{$step});
   }
+}
 
-  .active-filters {
+.catalog__section-title {
+  font-size: $step*1.5;
+  margin-bottom: $step*1.5;
+}
 
-    padding: $step 0;
+.catalog__filter {
+  // specifics are in components/_catalog-filters.scss
+}
 
-    &, h1 {
-      font-size: $base-font-size;
-    }
+.catalog__active-filters {
+  margin: 0;
 
-    h1 {
-      display: inline;
-      margin-right: $step*.5;
-
-      &::after {
-        content: ':';
-      }
-    }
-
-    ul, li {
-      margin: 0;
-      padding: 0;
-    }
-
-    ul {
-      display: inline;
-    }
-
-    .active-filter {
-      display: inline-block;
-    }
-
-    .active-filter {
-      height: $step;
-      margin-right: $step*.5;
-      padding: 0 $step*.25;
-      padding-top: #{($step - $base-font-size - 2) *.25};
-      border-radius: $step*.25;
-      background-color: $muted-color;
-      color: $light-color;
-      text-transform: uppercase;
-
-      // hide inactive filters
-      &[data-filter-value=''] {
-        display: none;
-      }
-    }
-
-    .active-filter__remove {
-      height: $base-font-size;
-      width: $base-font-size;
-      padding: 0;
-      margin-top: -3px;
-      background-color: $dark-color;
-      color: $light-color;
-
-      &::after {
-        // multiply sign
-        content: '\00d7';
-      }
-    }
+  @include media-query('medium') {
+    margin-left: 50%;
   }
+  @include media-query('large') {
+    margin-left: 25%;
+  }
+  padding: 0 0 $step;
+  border-bottom: 1px solid $light-color;
+  // specifics are in components/_catalog-filters.scss
+}
 
+.catalog__products {
+  margin: 0;
+  padding: 0;
+
+  @include media-query('medium') {
+    margin-left: 50%;
+  }
+  @include media-query('large') {
+    margin-left: 25%;
+  }
+}
+
+.catalog__summary {
+  margin: $step 0;
+  text-transform: uppercase;
+}
+
+.summary__total-count {
+  float: left;
+  width: 30%;
+}
+
+.summary__sorting {
+  text-align: right;
+}
+
+.catalog__products {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.catalog__product {
+  position: relative;
+  display: block;
+  list-style: none;
+  width: calc(33% - #{$step*.55});
+  margin: 0 $step $step 0;
+  padding-bottom: 30%;
+  background-color: white;
+  border-radius: $step*.25;
+  box-shadow: 0 0 5px rgba(0,0,0,0.1);
+
+  &:nth-of-type(3n+3) {
+    margin-right: 0;
+  }
+}
+
+.product__image, .product__name, .product__price {
+  position: absolute;
+}
+
+.product__image {
+  top: $step*.5;;
+  left: 10%;
+  width: 80%;
+}
+
+.product__name, .product__price {
+  left: 0;
+  width: 100%;
+  margin: 0;
+  background-color: rgba(255,255,255,0.8);
+  text-align: center;
+}
+
+h1.product__name {
+  bottom: $step*1.5;
+  color: $dark-color;
+  font-size: $base-font-size;
+  line-height: $step;
+  text-transform: uppercase;
+}
+
+.product__price {
+  bottom: $step*.5;
+  color: $brand-color;
+  font-size: $step;
 }
