--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -3,7 +3,7 @@
 <div class="catalog">
   <h1 class="catalog__section-title">Wild life</h1>
 
-  <div class="catalog__filter">
+  <aside class="catalog__filter">
     <section class="filter js-filter js-filter-default filter__category" data-filter-id="1">
       <ul class="filter__category-list">
         <li>{{> catalog/filter-default filter-id='1' name='Alle' id='123' quantity='40' default=true}}</li>
@@ -42,9 +42,9 @@
         <li>{{> catalog/filter-multivalue filter-id=4 name='Aus Holz' id='246' quantity='7'}}</li>
       </ul>
     </section>
-  </div>
+  </aside>
 
-  <section class="active-filters">
+  <section class="catalog__active-filters">
     <h1>Aktive filter</h1>
     <ul class="active-filter__list">
       {{> catalog/active-filter name='category' id='1' value='' }}
@@ -53,6 +53,75 @@
       {{> catalog/active-filter name='extras' id='4' value='' }}
     </ul>
   </section>
+
+  <header class="catalog__summary">
+    <div class="summary__total-count">67 figuren gefunden</div>
+    <div class="summary__sorting">
+      Sortieren
+      <button class="sorting__button--inc">A-Z</button>
+      <button class="sorting__button--dec">Z-A</button>
+      <button class="sorting__button--inc">
+        <span class="sorting__label--small">€</span>
+        <span class="sorting__label--medium">€</span>
+        <span class="sorting__label--large">€</span>
+      </button>
+      <button class="sorting__button--dec">
+        <span class="sorting__label--large">€</span>
+        <span class="sorting__label--medium">€</span>
+        <span class="sorting__label--small">€</span>
+      </button>
+    </div>
+  </header>
+
+  <ul class="catalog__products">
+    <li class="catalog__product">
+      <img src="/images/products/baby-panda.jpg" alt="" class="product__image">
+      <h1 class="product__name">Pandababy</h1>
+      <h2 class="product__price">€9,99</h2>
+    </li>
+    <li class="catalog__product">
+      <img src="/images/products/baby-white-tiger.jpg" alt="" class="product__image">
+      <h1 class="product__name">Weißtigerbaby</h1>
+      <h2 class="product__price">€9,99</h2>
+    </li>
+    <li class="catalog__product">
+      <img src="/images/products/baby-tiger.jpg" alt="" class="product__image">
+      <h1 class="product__name">Tigerbaby</h1>
+      <h2 class="product__price">€9,99</h2>
+    </li>
+    <li class="catalog__product">
+      <img src="/images/products/crocodile.jpg" alt="" class="product__image">
+      <h1 class="product__name">Krokodil</h1>
+      <h2 class="product__price">€9,99</h2>
+    </li>
+    <li class="catalog__product">
+      <img src="/images/products/horse-begging.jpg" alt="" class="product__image">
+      <h1 class="product__name">Pferd</h1>
+      <h2 class="product__price">€9,99</h2>
+    </li>
+    <li class="catalog__product">
+      <img src="/images/products/horse-black-white.jpg" alt="" class="product__image">
+      <h1 class="product__name">Pferd 2</h1>
+      <h2 class="product__price">€9,99</h2>
+    </li>
+    <li class="catalog__product">
+      <img src="/images/products/lion.jpg" alt="" class="product__image">
+      <h1 class="product__name">Löwe</h1>
+      <h2 class="product__price">€9,99</h2>
+    </li>
+    <li class="catalog__product">
+      <img src="/images/products/ostrich.jpg" alt="" class="product__image">
+      <h1 class="product__name">Strauß</h1>
+      <h2 class="product__price">€9,99</h2>
+    </li>
+    <li class="catalog__product">
+      <img src="/images/products/rhinoceros.jpg" alt="" class="product__image">
+      <h1 class="product__name">Nashorn</h1>
+      <h2 class="product__price">€9,99</h2>
+    </li>
+  </ul>
+
+  <div class="catalog__pagination"></div>
 </div>
 
 {{> footer}}
