--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -73,55 +73,108 @@
     </div>
   </header>
 
-  <ul class="catalog__products">
-    <li class="catalog__product">
-      <img src="/images/products/baby-panda.jpg" alt="" class="product__image">
-      <h1 class="product__name">Pandababy</h1>
-      <h2 class="product__price">€9,99</h2>
-    </li>
-    <li class="catalog__product">
-      <img src="/images/products/baby-white-tiger.jpg" alt="" class="product__image">
-      <h1 class="product__name">Weißtigerbaby</h1>
-      <h2 class="product__price">€9,99</h2>
-    </li>
-    <li class="catalog__product">
-      <img src="/images/products/baby-tiger.jpg" alt="" class="product__image">
-      <h1 class="product__name">Tigerbaby</h1>
-      <h2 class="product__price">€9,99</h2>
-    </li>
-    <li class="catalog__product">
-      <img src="/images/products/crocodile.jpg" alt="" class="product__image">
-      <h1 class="product__name">Krokodil</h1>
-      <h2 class="product__price">€9,99</h2>
-    </li>
-    <li class="catalog__product">
-      <img src="/images/products/horse-begging.jpg" alt="" class="product__image">
-      <h1 class="product__name">Pferd</h1>
-      <h2 class="product__price">€9,99</h2>
-    </li>
-    <li class="catalog__product">
-      <img src="/images/products/horse-black-white.jpg" alt="" class="product__image">
-      <h1 class="product__name">Pferd 2</h1>
-      <h2 class="product__price">€9,99</h2>
-    </li>
-    <li class="catalog__product">
-      <img src="/images/products/lion.jpg" alt="" class="product__image">
-      <h1 class="product__name">Löwe</h1>
-      <h2 class="product__price">€9,99</h2>
-    </li>
-    <li class="catalog__product">
-      <img src="/images/products/ostrich.jpg" alt="" class="product__image">
-      <h1 class="product__name">Strauß</h1>
-      <h2 class="product__price">€9,99</h2>
-    </li>
-    <li class="catalog__product">
-      <img src="/images/products/rhinoceros.jpg" alt="" class="product__image">
-      <h1 class="product__name">Nashorn</h1>
-      <h2 class="product__price">€9,99</h2>
-    </li>
-  </ul>
+  <div class="catalog__products-holder js-products-holder">
+    <ul class="catalog__products js-products-current">
+      <li class="catalog__product">
+        <img src="/images/products/baby-panda.jpg" alt="" class="product__image">
+        <h1 class="product__name">Pandababy</h1>
+        <h2 class="product__price">€9,99</h2>
+      </li>
+      <li class="catalog__product">
+        <img src="/images/products/baby-white-tiger.jpg" alt="" class="product__image">
+        <h1 class="product__name">Weißtigerbaby</h1>
+        <h2 class="product__price">€9,99</h2>
+      </li>
+      <li class="catalog__product">
+        <img src="/images/products/baby-tiger.jpg" alt="" class="product__image">
+        <h1 class="product__name">Tigerbaby</h1>
+        <h2 class="product__price">€9,99</h2>
+      </li>
+      <li class="catalog__product">
+        <img src="/images/products/crocodile.jpg" alt="" class="product__image">
+        <h1 class="product__name">Krokodil</h1>
+        <h2 class="product__price">€9,99</h2>
+      </li>
+      <li class="catalog__product">
+        <img src="/images/products/horse-begging.jpg" alt="" class="product__image">
+        <h1 class="product__name">Pferd</h1>
+        <h2 class="product__price">€9,99</h2>
+      </li>
+      <li class="catalog__product">
+        <img src="/images/products/horse-black-white.jpg" alt="" class="product__image">
+        <h1 class="product__name">Pferd 2</h1>
+        <h2 class="product__price">€9,99</h2>
+      </li>
+      <li class="catalog__product">
+        <img src="/images/products/lion.jpg" alt="" class="product__image">
+        <h1 class="product__name">Löwe</h1>
+        <h2 class="product__price">€9,99</h2>
+      </li>
+      <li class="catalog__product">
+        <img src="/images/products/ostrich.jpg" alt="" class="product__image">
+        <h1 class="product__name">Strauß</h1>
+        <h2 class="product__price">€9,99</h2>
+      </li>
+      <li class="catalog__product">
+        <img src="/images/products/rhinoceros.jpg" alt="" class="product__image">
+        <h1 class="product__name">Nashorn</h1>
+        <h2 class="product__price">€9,99</h2>
+      </li>
+    </ul>
 
-  <div class="catalog__pagination"></div>
+    <ul class="catalog__products js-products-next">
+      <li class="catalog__product">
+        <img src="/images/products/baby-panda.jpg" alt="" class="product__image">
+        <h1 class="product__name">Pandababy</h1>
+        <h2 class="product__price">€9,99</h2>
+      </li>
+      <li class="catalog__product">
+        <img src="/images/products/baby-white-tiger.jpg" alt="" class="product__image">
+        <h1 class="product__name">Weißtigerbaby</h1>
+        <h2 class="product__price">€9,99</h2>
+      </li>
+      <li class="catalog__product">
+        <img src="/images/products/baby-tiger.jpg" alt="" class="product__image">
+        <h1 class="product__name">Tigerbaby</h1>
+        <h2 class="product__price">€9,99</h2>
+      </li>
+      <li class="catalog__product">
+        <img src="/images/products/crocodile.jpg" alt="" class="product__image">
+        <h1 class="product__name">Krokodil</h1>
+        <h2 class="product__price">€9,99</h2>
+      </li>
+      <li class="catalog__product">
+        <img src="/images/products/horse-begging.jpg" alt="" class="product__image">
+        <h1 class="product__name">Pferd</h1>
+        <h2 class="product__price">€9,99</h2>
+      </li>
+      <li class="catalog__product">
+        <img src="/images/products/horse-black-white.jpg" alt="" class="product__image">
+        <h1 class="product__name">Pferd 2</h1>
+        <h2 class="product__price">€9,99</h2>
+      </li>
+      <li class="catalog__product">
+        <img src="/images/products/lion.jpg" alt="" class="product__image">
+        <h1 class="product__name">Löwe</h1>
+        <h2 class="product__price">€9,99</h2>
+      </li>
+      <li class="catalog__product">
+        <img src="/images/products/ostrich.jpg" alt="" class="product__image">
+        <h1 class="product__name">Strauß</h1>
+        <h2 class="product__price">€9,99</h2>
+      </li>
+      <li class="catalog__product">
+        <img src="/images/products/rhinoceros.jpg" alt="" class="product__image">
+        <h1 class="product__name">Nashorn</h1>
+        <h2 class="product__price">€9,99</h2>
+      </li>
+    </ul>
+  </div>
+
+  <div class="catalog__pagination">
+    <button class="pagination__button js-pagination-prev">Prev</button>
+    <button class="pagination__button js-pagination-next">Next</button>
+  </div>
 </div>
 
 {{> footer}}
