stop a 404 caused by an unused slider background image

--- a/assets/styles/components/_catalog-filters.scss
+++ b/assets/styles/components/_catalog-filters.scss
@@ -70,6 +70,7 @@
   .filter__price {
     .filter__price-slider {
       margin-bottom: $step;
+      background-image: none;
     }
 
     .filter__price-min, .filter__price-max {
