--- a/templates/partials/overlay.hbs
+++ b/templates/partials/overlay.hbs
@@ -1,6 +1,6 @@
 <div class="overlay">
   <a href="#" class="overlay__close js-overlay-close">Close</a>
-  <form action="#" name="login" class="login-form js-login-form">
+  <form action="#" name="login" class="login-form js-login-form" data-register-url="/register/" data-login-url="/login/">
     <input type="text" class="login__email" placeholder="E-mail-Adresse">
     <input type="password" class="login__password" placeholder="Passwort">
     <button class="login__forgot-password">Vergessen?</button>
