Patched links to external resources

--- a/src/SprykerFeature/Zed/Auth/Static/Assets/styles/screen.scss
+++ b/src/SprykerFeature/Zed/Auth/Static/Assets/styles/screen.scss
@@ -1,5 +1,5 @@
-@import '../../../../../../SprykerFeature/Zed/Ui/Static/Assets/styles/lib/index.scss';
-@import '../../../../../../SprykerFeature/Zed/Ui/Static/Assets/styles/extend/index.scss';
+@import '../../../../../../../../ui/src/SprykerFeature/Zed/Ui/Static/Assets/styles/lib/index.scss';
+@import '../../../../../../../../ui/src/SprykerFeature/Zed/Ui/Static/Assets/styles/extend/index.scss';
 
 @import '../sprite/scss/sprite.scss';
 
