refactor product loading so that filtering triggers it too

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -76,97 +76,134 @@
   <div class="catalog__products-holder js-products-holder">
     <section class="catalog__products js-products-current">
       <article class="catalog__product">
-        <img src="/images/products/baby-panda.jpg" alt="" class="product__image">
-        <h1 class="product__name">Pandababy</h1>
-        <h2 class="product__price">€9,99</h2>
+        <a href="/product-detail.html?id=123" class="product__link">
+          <img src="/images/products/baby-panda.jpg" alt="" class="product__image">
+          <h1 class="product__name">Pandababy</h1>
+          <h2 class="product__price">€9,99</h2>
+        </a>
       </article>
       <article class="catalog__product">
-        <img src="/images/products/baby-white-tiger.jpg" alt="" class="product__image">
-        <h1 class="product__name">Weißtigerbaby</h1>
-        <h2 class="product__price">€9,99</h2>
+        <a href="/product-detail.html?id=123" class="product__link">
+          <img src="/images/products/baby-white-tiger.jpg" alt="" class="product__image">
+          <h1 class="product__name">Weißtigerbaby</h1>
+          <h2 class="product__price">€9,99</h2>
+        </a>
       </article>
       <article class="catalog__product">
-        <img src="/images/products/baby-tiger.jpg" alt="" class="product__image">
-        <h1 class="product__name">Tigerbaby</h1>
-        <h2 class="product__price">€9,99</h2>
+        <a href="/product-detail.html?id=123" class="product__link">
+          <img src="/images/products/baby-tiger.jpg" alt="" class="product__image">
+          <h1 class="product__name">Tigerbaby</h1>
+          <h2 class="product__price">€9,99</h2>
+        </a>
       </article>
       <article class="catalog__product">
-        <img src="/images/products/crocodile.jpg" alt="" class="product__image">
-        <h1 class="product__name">Krokodil</h1>
-        <h2 class="product__price">€9,99</h2>
+        <a href="/product-detail.html?id=123" class="product__link">
+          <img src="/images/products/crocodile.jpg" alt="" class="product__image">
+          <h1 class="product__name">Krokodil</h1>
+          <h2 class="product__price">€9,99</h2>
+        </a>
       </article>
       <article class="catalog__product">
-        <img src="/images/products/horse-begging.jpg" alt="" class="product__image">
-        <h1 class="product__name">Pferd</h1>
-        <h2 class="product__price">€9,99</h2>
+        <a href="/product-detail.html?id=123" class="product__link">
+          <img src="/images/products/horse-begging.jpg" alt="" class="product__image">
+          <h1 class="product__name">Pferd</h1>
+          <h2 class="product__price">€9,99</h2>
+        </a>
       </article>
       <article class="catalog__product">
-        <img src="/images/products/horse-black-white.jpg" alt="" class="product__image">
-        <h1 class="product__name">Pferd 2</h1>
-        <h2 class="product__price">€9,99</h2>
+        <a href="/product-detail.html?id=123" class="product__link">
+          <img src="/images/products/horse-black-white.jpg" alt="" class="product__image">
+          <h1 class="product__name">Pferd 2</h1>
+          <h2 class="product__price">€9,99</h2>
+        </a>
       </article>
       <article class="catalog__product">
-        <img src="/images/products/lion.jpg" alt="" class="product__image">
-        <h1 class="product__name">Löwe</h1>
-        <h2 class="product__price">€9,99</h2>
+        <a href="/product-detail.html?id=123" class="product__link">
+          <img src="/images/products/lion.jpg" alt="" class="product__image">
+          <h1 class="product__name">Löwe</h1>
+          <h2 class="product__price">€9,99</h2>
+        </a>
       </article>
       <article class="catalog__product">
-        <img src="/images/products/ostrich.jpg" alt="" class="product__image">
-        <h1 class="product__name">Strauß</h1>
-        <h2 class="product__price">€9,99</h2>
+        <a href="/product-detail.html?id=123" class="product__link">
+          <img src="/images/products/ostrich.jpg" alt="" class="product__image">
+          <h1 class="product__name">Strauß</h1>
+          <h2 class="product__price">€9,99</h2>
+        </a>
       </article>
       <article class="catalog__product">
-        <img src="/images/products/rhinoceros.jpg" alt="" class="product__image">
-        <h1 class="product__name">Nashorn</h1>
-        <h2 class="product__price">€9,99</h2>
+        <a href="/product-detail.html?id=123" class="product__link">
+          <img src="/images/products/rhinoceros.jpg" alt="" class="product__image">
+          <h1 class="product__name">Nashorn</h1>
+          <h2 class="product__price">€9,99</h2>
+        </a>
       </article>
     </section>
+    <div class="catalog__loading-text">Loading...</div>
 
     <section class="catalog__products js-products-next">
       <article class="catalog__product">
-        <img src="/images/products/baby-panda.jpg" alt="" class="product__image">
-        <h1 class="product__name">Pandababy</h1>
-        <h2 class="product__price">€9,99</h2>
+        <a href="/product-detail.html?id=123" class="product__link">
+          <img src="/images/products/baby-panda.jpg" alt="" class="product__image">
+          <h1 class="product__name">Pandababy</h1>
+          <h2 class="product__price">€9,99</h2>
+        </a>
       </article>
       <article class="catalog__product">
-        <img src="/images/products/baby-white-tiger.jpg" alt="" class="product__image">
-        <h1 class="product__name">Weißtigerbaby</h1>
-        <h2 class="product__price">€9,99</h2>
+        <a href="/product-detail.html?id=123" class="product__link">
+          <img src="/images/products/baby-white-tiger.jpg" alt="" class="product__image">
+          <h1 class="product__name">Weißtigerbaby</h1>
+          <h2 class="product__price">€9,99</h2>
+        </a>
       </article>
       <article class="catalog__product">
-        <img src="/images/products/baby-tiger.jpg" alt="" class="product__image">
-        <h1 class="product__name">Tigerbaby</h1>
-        <h2 class="product__price">€9,99</h2>
+        <a href="/product-detail.html?id=123" class="product__link">
+          <img src="/images/products/baby-tiger.jpg" alt="" class="product__image">
+          <h1 class="product__name">Tigerbaby</h1>
+          <h2 class="product__price">€9,99</h2>
+        </a>
       </article>
       <article class="catalog__product">
-        <img src="/images/products/crocodile.jpg" alt="" class="product__image">
-        <h1 class="product__name">Krokodil</h1>
-        <h2 class="product__price">€9,99</h2>
+        <a href="/product-detail.html?id=123" class="product__link">
+          <img src="/images/products/crocodile.jpg" alt="" class="product__image">
+          <h1 class="product__name">Krokodil</h1>
+          <h2 class="product__price">€9,99</h2>
+        </a>
       </article>
       <article class="catalog__product">
-        <img src="/images/products/horse-begging.jpg" alt="" class="product__image">
-        <h1 class="product__name">Pferd</h1>
-        <h2 class="product__price">€9,99</h2>
+        <a href="/product-detail.html?id=123" class="product__link">
+          <img src="/images/products/horse-begging.jpg" alt="" class="product__image">
+          <h1 class="product__name">Pferd</h1>
+          <h2 class="product__price">€9,99</h2>
+        </a>
       </article>
       <article class="catalog__product">
-        <img src="/images/products/horse-black-white.jpg" alt="" class="product__image">
-        <h1 class="product__name">Pferd 2</h1>
-        <h2 class="product__price">€9,99</h2>
+        <a href="/product-detail.html?id=123" class="product__link">
+          <img src="/images/products/horse-black-white.jpg" alt="" class="product__image">
+          <h1 class="product__name">Pferd 2</h1>
+          <h2 class="product__price">€9,99</h2>
+        </a>
       </article>
       <article class="catalog__product">
-        <img src="/images/products/lion.jpg" alt="" class="product__image">
-        <h1 class="product__name">Löwe</h1>
-        <h2 class="product__price">€9,99</h2>
+        <a href="/product-detail.html?id=123" class="product__link">
+          <img src="/images/products/lion.jpg" alt="" class="product__image">
+          <h1 class="product__name">Löwe</h1>
+          <h2 class="product__price">€9,99</h2>
+        </a>
       </article>
       <article class="catalog__product">
-        <img src="/images/products/ostrich.jpg" alt="" class="product__image">
-        <h1 class="product__name">Strauß</h1>
-        <h2 class="product__price">€9,99</h2>
+        <a href="/product-detail.html?id=123" class="product__link">
+          <img src="/images/products/ostrich.jpg" alt="" class="product__image">
+          <h1 class="product__name">Strauß</h1>
+          <h2 class="product__price">€9,99</h2>
+        </a>
       </article>
       <article class="catalog__product">
-        <img src="/images/products/rhinoceros.jpg" alt="" class="product__image">
-        <h1 class="product__name">Nashorn</h1>
-        <h2 class="product__price">€9,99</h2>
+        <a href="/product-detail.html?id=123" class="product__link">
+          <img src="/images/products/rhinoceros.jpg" alt="" class="product__image">
+          <h1 class="product__name">Nashorn</h1>
+          <h2 class="product__price">€9,99</h2>
+        </a>
       </article>
     </section>
   </div>
