Patched link to external resources

--- a/src/SprykerFeature/Zed/UiExample/Static/Assets/styles/screen.scss
+++ b/src/SprykerFeature/Zed/UiExample/Static/Assets/styles/screen.scss
@@ -1,5 +1,5 @@
-@import '../../../../Ui/Static/Assets/styles/lib/index.scss';
-@import "../../../../Ui/Static/Assets/styles/extend/index.scss";
+@import '../../../../../../../../ui/src/SprykerFeature/Zed/Ui/Static/Assets/styles/lib/index.scss';
+@import '../../../../../../../../ui/src/SprykerFeature/Zed/Ui/Static/Assets/styles/extend/index.scss';
 
 
 .spy-example {
