--- a/src/SprykerFeature/Zed/Application/Static/Assets/styles/screen.scss
+++ b/src/SprykerFeature/Zed/Application/Static/Assets/styles/screen.scss
@@ -1,5 +1,5 @@
-@import '../../../../Ui/Static/Assets/styles/lib/index.scss';
-@import '../../../../Ui/Static/Assets/styles/extend/index.scss';
+@import '../../../../../../../../ui/src/SprykerFeature/Zed/Ui/Static/Assets/styles/lib/index.scss';
+@import '../../../../../../../../ui/src/SprykerFeature/Zed/Ui/Static/Assets/styles/extend/index.scss';
 
 @import '../sprite/scss/sprite.scss';
 @import 'extend/index.scss';
