--- a/src/SprykerFeature/Zed/Auth/Static/Assets/styles/screen.scss
+++ b/src/SprykerFeature/Zed/Auth/Static/Assets/styles/screen.scss
@@ -77,7 +77,7 @@ body.spy-login {
 				-webkit-filter:unquote('invert()');
 				-webkit-box-shadow:0 0 0 20px invert($_rgbSpyEbonyClay) inset;
 				border-color:invert($_rgbSpyEbonyClay);
-				color:invert(_$rgbSpyRiverBed);
+				color:invert($_rgbSpyRiverBed);
 			}
 		}
 
