--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -4,53 +4,19 @@
   <h1 class="catalog__section-title">Wild life</h1>
 
   <aside class="catalog__filter">
-    <section class="filter js-filter js-filter-default filter__category" data-filter-id="1">
-      <ul class="filter__category-list">
-        <li>{{> catalog/filter-default filter-id='1' name='Alle' id='123' quantity='40' default=true}}</li>
-        <li>{{> catalog/filter-default filter-id='1' name='Afrika' id='456' quantity='12'}}</li>
-        <li>{{> catalog/filter-default filter-id='1' name='Asien und Australien' id='789' quantity='8'}}</li>
-        <li>{{> catalog/filter-default filter-id='1' name='Arktis und Antarktis' id='135' quantity='5'}}</li>
-        <li>{{> catalog/filter-default filter-id='1' name='Amerika' id='246' quantity='7'}}</li>
-        <li>{{> catalog/filter-default filter-id='1' name='Meere' id='999' quantity='8'}}</li>
-      </ul>
-    </section>
-
-    <section class="filter js-filter filter__color" data-filter-id="2">
-      <h1 class="filter__title">Farbe</h1>
-      <ul class="filter__color-list">
-        <li>{{> catalog/filter-color hex='#ffffff' id='123' quantity='40' checked=true}}</li>
-        <li>{{> catalog/filter-color hex='#000000' id='456' quantity='12'}}</li>
-        <li>{{> catalog/filter-color hex='#4c90dd' id='789' quantity='8'}}</li>
-        <li>{{> catalog/filter-color hex='#89562b' id='135' quantity='5'}}</li>
-        <li>{{> catalog/filter-color hex='#9b9b9b' id='246' quantity='7'}}</li>
-      </ul>
-    </section>
-
-    <section class="filter js-filter filter__price" data-filter-id="3">
-      <h1 class="filter__title">Preis</h1>
-      <div class="filter__price-slider js-price-slider"></div>
-      <p>Preisspanne von <span class="filter__price-min js-filter-price-min">0</span> bis <span class="filter__price-max js-filter-price-max">200</span></p>
-    </section>
-
-    <section class="filter js-filter filter__extras" data-filter-id="4">
-      <h1 class="filter__title">Sonstige Merkmale</h1>
-      <ul class="filter__extras-list">
-        <li>{{> catalog/filter-multivalue filter-id=4 name='Neu' id='123' quantity='40'}}</li>
-        <li>{{> catalog/filter-multivalue filter-id=4 name='Sale' id='456' quantity='12'}}</li>
-        <li>{{> catalog/filter-multivalue filter-id=4 name='Besonders toll' id='789' quantity='8'}}</li>
-        <li>{{> catalog/filter-multivalue filter-id=4 name='Aus Kunststoff' id='135' quantity='5'}}</li>
-        <li>{{> catalog/filter-multivalue filter-id=4 name='Aus Holz' id='246' quantity='7'}}</li>
-      </ul>
-    </section>
+    {{> catalog/filter-default filter-name='category' }}
+    {{> catalog/filter-color filter-name='color' }}
+    {{> catalog/filter-range filter-name='price' min='0' max='200' }}
+    {{> catalog/filter-multivalue filter-name='extras' }}
   </aside>
 
   <section class="catalog__active-filters">
     <h1>Aktive filter</h1>
     <ul class="active-filter__list">
-      {{> catalog/active-filter name='category' id='1' value='' }}
-      {{> catalog/active-filter name='color' id='2' value='' }}
-      {{> catalog/active-filter name='price' id='3' value='' }}
-      {{> catalog/active-filter name='extras' id='4' value='' }}
+      {{> catalog/active-filter name='category' value='' }}
+      {{> catalog/active-filter name='color' value='' }}
+      {{> catalog/active-filter name='price' value='' }}
+      {{> catalog/active-filter name='extras' value='' }}
     </ul>
   </section>
 
