--- a/templates/partials/catalog/filter-color.hbs
+++ b/templates/partials/catalog/filter-color.hbs
@@ -1,9 +1,10 @@
-<input type="radio"
-       id="filter-{{filter-id}}-{{id}}"
-       name="filter-{{filter-id}}"
-       data-color="{{hex}}"
-       value="{{id}}"
-       {{#if checked}} checked=true{{/if}}>
-<label for="filter-{{filter-id}}-{{id}}" class="js-color-name">{{hex}}
-  <span class="filter__quantity">{{quantity}}</span>
-</label>
+<section class="filter js-filter filter__{{filter-name}}" data-filter-id="{{filter-id}}" data-filter-name="{{filter-name}}" data-filter-type="color">
+  <h1 class="filter__title">Farbe</h1>
+  <ul class="filter__{{filter-name}}-list">
+    <li>{{> catalog/filter-color-value value="white" hex='#ffffff' quantity='40'}}</li>
+    <li>{{> catalog/filter-color-value value="black" hex='#000000' quantity='12'}}</li>
+    <li>{{> catalog/filter-color-value value="blue" hex='#4c90dd' quantity='8'}}</li>
+    <li>{{> catalog/filter-color-value value="brown" hex='#89562b' quantity='5'}}</li>
+    <li>{{> catalog/filter-color-value value="gray" hex='#9b9b9b' quantity='7'}}</li>
+  </ul>
+</section>
