--- a/templates/partials/catalog/filter-default.hbs
+++ b/templates/partials/catalog/filter-default.hbs
@@ -1,11 +1,10 @@
-<input type="radio"
-        id="filter-{{filter-id}}-{{id}}"
-        name="filter-{{filter-id}}"
-        value="{{id}}"
-        {{#if default}}
-          checked=true
-          class="js-filter-default-value"
-        {{/if}}>
-<label for="filter-{{filter-id}}-{{id}}">{{name}}
-  <span class="filter__quantity">{{quantity}}</span>
-</label>
+<section class="filter js-filter js-filter-default filter__{{ filter-name }}" data-filter-name="{{filter-name}}" data-filter-type="default">
+  <ul class="filter__{{ filter-name }}-list">
+    <li>{{> catalog/filter-default-value display-value='Alle' value='alle' quantity='40' default=true}}</li>
+    <li>{{> catalog/filter-default-value display-value='Afrika' value='afrika' quantity='12'}}</li>
+    <li>{{> catalog/filter-default-value display-value='Asien und Australien' value='asien%20und%20australien' quantity='8'}}</li>
+    <li>{{> catalog/filter-default-value display-value='Arktis und Antarktis' value='arktis%20und%20antarktis' quantity='5'}}</li>
+    <li>{{> catalog/filter-default-value display-value='Amerika' value='amerika' quantity='7'}}</li>
+    <li>{{> catalog/filter-default-value display-value='Meere' value='meere' quantity='8'}}</li>
+  </ul>
+</section>
